<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.onlineFacilityForStudentActivity">

    <!-- Nested Scroll view -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/online_facility_for_student"
                android:textStyle="bold|italic"
                android:textSize="25sp"
                android:gravity="center"
                />
            <androidx.cardview.widget.CardView

                style="@style/About_section_cv_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:elevation="10dp"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:id="@+id/online_fee_payment"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/cash_less_payment"
                            android:contentDescription="@string/online_fee_payment" />
                        <TextView
                            style="@style/About_section_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="25dp"
                            android:text="@string/online_fee_payment" />
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        />
                    <LinearLayout
                        android:id="@+id/hit_library_web_opac"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/library_opac"
                            android:contentDescription="@string/hit_library_web_opac" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/About_section_text"
                            android:layout_marginStart="25dp"

                            android:text="@string/hit_library_web_opac" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/e_clearance_from"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/e_clear_form"
                            android:contentDescription="@string/e_clearance_form" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/About_section_text"
                            android:layout_marginStart="25dp"
                            android:text="@string/e_clearance_form" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/e_clearance_status"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/e_clear_status"
                            android:contentDescription="@string/e_clearance_status" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/About_section_text"
                            android:layout_marginStart="25dp"
                            android:text="@string/e_clearance_status" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                style="@style/About_section_cv_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:elevation="10dp"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:id="@+id/graduation_image_2020"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ceremony_picture"
                            android:contentDescription="@string/graduation_ceremony_pictures" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/About_section_text"
                            android:layout_marginStart="25dp"
                            android:text="@string/graduation_ceremony_pictures" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/online_login_details"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/login_details_profile"
                            android:contentDescription="@string/know_your_login_details" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/About_section_text"
                            android:layout_marginStart="25dp"
                            android:text="@string/know_your_login_details" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/download_admission_letter"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/admission_letter_download"
                            android:contentDescription="@string/download_admission_letter" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/About_section_text"
                            android:layout_marginStart="25dp"
                            android:text="@string/download_admission_letter" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/autonomy_roll_ll"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/autonomy_roll_image"
                            android:contentDescription="@string/autonomy_roll_1st_year_and_for_2nd_year_lateral_only" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/About_section_text"
                            android:layout_marginStart="25dp"
                            android:text="@string/autonomy_roll_1st_year_and_for_2nd_year_lateral_only" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                style="@style/About_section_cv_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:elevation="10dp"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:id="@+id/online_student_login"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/login_icon"
                            android:contentDescription="@string/online_student_login" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/About_section_text"
                            android:layout_marginStart="25dp"
                            android:text="@string/online_student_login" />
                    </LinearLayout
                        >
                    <LinearLayout
                        android:id="@+id/graduation_image_2022"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ceremony_picture"
                            android:contentDescription="@string/graduation_ceremony_pictures_2022" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/About_section_text"
                            android:layout_marginStart="25dp"
                            android:text="@string/graduation_ceremony_pictures_2022" />
                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>