<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layout_marginTop="10dp"
    style="@style/Profile_update_bg"
   >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image_setUp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:scaleType="centerCrop"
        android:src="@drawable/biki_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_image_setUp"
            >

             <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="@dimen/header_text_size"
                android:text="Update Profile"
                android:layout_marginBottom="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Edit_Text_Color"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_mobile_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Edit_Text_Color"/>

            </com.google.android.material.textfield.TextInputLayout>
            

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Your address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Edit_Text_Color"/>

            </com.google.android.material.textfield.TextInputLayout>

            
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Your Date Of Birth"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/edit_text_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Edit_Text_Color"/>

            </com.google.android.material.textfield.TextInputLayout>

            

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_college_roll"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_roll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Edit_Text_Color"/>

            </com.google.android.material.textfield.TextInputLayout>

            
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_college_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Edit_Text_Color"/>

            </com.google.android.material.textfield.TextInputLayout>
            

            <com.google.android.material.button.MaterialButton
                android:layout_marginTop="10dp"
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                android:layout_gravity="center"
                />

        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>